# noqlen-flux-core

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: architecture.md  handoff.md  release-checklist.md  safety.md
src/noqlen_flux/: __init__.py  artifact_registration.py  audio_probe.py  cleanup.py  cli.py  config.py  connections.py  downloads.py  fileops.py  handoff.py  musiclab.py  musiclab_quality.py  musiclab_scenario.py  musiclab_scenario_factory.py  musiclab_scenario_packs.py  musiclab_score_baseline.py  musiclab_score_baseline_packs.py  paths.py  (+14 more)
tests/: test_artifact_registration.py  test_audio_probe.py  test_cleanup_models.py  test_cleanup_service.py  test_cli.py  test_cli_provisioning.py  test_download_models.py  test_download_planning_service.py  test_download_workspace_safety.py  test_fake_provider.py  test_fake_queue_execution_provider.py  test_fileops_models.py  test_fileops_service.py  test_handoff_models.py  test_handoff_service.py  test_musiclab.py  test_musiclab_quality.py  test_musiclab_scenario.py  test_musiclab_scoring.py  test_pipeline_boundaries.py  test_provider_boundaries.py  test_provider_provisioning_service.py  test_provider_service.py  test_provider_status_models.py  test_provisioning_models.py  test_quality_inspect.py  test_quality_models.py  test_quality_service.py  test_reports.py  test_results.py  test_routing_models.py  test_routing_service.py  test_safety.py  test_scoring_models.py  test_scoring_service.py  test_search_models.py  test_search_service.py  test_secret_models.py  test_secret_store.py  test_slskd_provider.py  (+9 more)
(+38 files in other folders)
