[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "noqlen-flux"
version = "0.1.0"
description = "Noqlen Flux Core search, staging, validation, and handoff bootstrap"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["audio", "music", "noqlen", "staging", "validation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Utilities",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
noqlen-flux = "noqlen_flux.cli:main"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
